--- a/Fake_News_Detection.ipynb
+++ b/Fake_News_Detection.ipynb
@@ -353,6 +353,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a190032",
+   "metadata": {},
+   "source": [
+    "# adding class in both dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "80d75826",
@@ -361,14 +369,6 @@
    "source": [
     "data_true['class']=1\n",
     "data_fake['class']=0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1394092e",
-   "metadata": {},
-   "source": [
-    "# adding class in both dataset"
    ]
   },
   {
@@ -1073,9 +1073,473 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c3f902a",
+   "metadata": {},
+   "source": [
+    "# merging data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "806e1a50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_merged=pd.concat([data_fake,data_true],axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67d63675",
+   "metadata": {},
+   "source": [
+    "# 100% shuffle of data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eca5143",
+   "metadata": {},
+   "source": [
+    "frac=1 → takes 100% of rows but shuffles their order.\n",
+    "\n",
+    "frac=0.5 → takes 50% of rows randomly.\n",
+    "\n",
+    "frac=0.2 → takes 20% of rows randomly.\n",
+    "\n",
+    "frac=2 → ❌ not allowed, must be between 0 and 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "5f625132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_merged=data_merged.sample(frac=1,random_state=41).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "28b14a9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>date</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Senate committee advances bill easing banking ...</td>\n",
+       "      <td>WASHINGTON (Reuters) - A U.S. Senate committee...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>December 5, 2017</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DETROIT PUBLIC SCHOOL Assistant Supervisor Adm...</td>\n",
+       "      <td>This is the same school district that is beggi...</td>\n",
+       "      <td>left-news</td>\n",
+       "      <td>May 4, 2016</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[VIDEO] WHAT JERRY SEINFELD HAS TO SAY ABOUT O...</td>\n",
+       "      <td>Kids Just Want To Use Words  That s racist, th...</td>\n",
+       "      <td>politics</td>\n",
+       "      <td>Jun 8, 2015</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>JK Rowling Is Absolutely Destroying Piers Mor...</td>\n",
+       "      <td>Washed up television personality Piers Morgan ...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>February 11, 2017</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pro – Clinton PAC Launches New Website Chroni...</td>\n",
+       "      <td>Today, Donald Trump tried to walk back his rec...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>June 10, 2016</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Judicial panel members consider legal brief in...</td>\n",
+       "      <td>WASHINGTON (Reuters) - Members of the House Ju...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>March 1, 2016</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>White House Staff Hiding From Reporters</td>\n",
+       "      <td>Word has gone out through the White House that...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>May 18, 2017</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Mexican army hit by execution finding as Senat...</td>\n",
+       "      <td>MEXICO CITY (Reuters) - Mexican soldiers arbit...</td>\n",
+       "      <td>worldnews</td>\n",
+       "      <td>December 6, 2017</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Protesters injured in Honduras clashes as elec...</td>\n",
+       "      <td>TEGUCIGALPA (Reuters) - Over two dozen people ...</td>\n",
+       "      <td>worldnews</td>\n",
+       "      <td>December 15, 2017</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Syrian, Russian jets bomb residential areas in...</td>\n",
+       "      <td>AMMAN (Reuters) - Jets believed to be Syrian a...</td>\n",
+       "      <td>worldnews</td>\n",
+       "      <td>December 4, 2017</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  Senate committee advances bill easing banking ...   \n",
+       "1  DETROIT PUBLIC SCHOOL Assistant Supervisor Adm...   \n",
+       "2  [VIDEO] WHAT JERRY SEINFELD HAS TO SAY ABOUT O...   \n",
+       "3   JK Rowling Is Absolutely Destroying Piers Mor...   \n",
+       "4   Pro – Clinton PAC Launches New Website Chroni...   \n",
+       "5  Judicial panel members consider legal brief in...   \n",
+       "6            White House Staff Hiding From Reporters   \n",
+       "7  Mexican army hit by execution finding as Senat...   \n",
+       "8  Protesters injured in Honduras clashes as elec...   \n",
+       "9  Syrian, Russian jets bomb residential areas in...   \n",
+       "\n",
+       "                                                text       subject  \\\n",
+       "0  WASHINGTON (Reuters) - A U.S. Senate committee...  politicsNews   \n",
+       "1  This is the same school district that is beggi...     left-news   \n",
+       "2  Kids Just Want To Use Words  That s racist, th...      politics   \n",
+       "3  Washed up television personality Piers Morgan ...          News   \n",
+       "4  Today, Donald Trump tried to walk back his rec...          News   \n",
+       "5  WASHINGTON (Reuters) - Members of the House Ju...  politicsNews   \n",
+       "6  Word has gone out through the White House that...          News   \n",
+       "7  MEXICO CITY (Reuters) - Mexican soldiers arbit...     worldnews   \n",
+       "8  TEGUCIGALPA (Reuters) - Over two dozen people ...     worldnews   \n",
+       "9  AMMAN (Reuters) - Jets believed to be Syrian a...     worldnews   \n",
+       "\n",
+       "                 date  class  \n",
+       "0   December 5, 2017       1  \n",
+       "1         May 4, 2016      0  \n",
+       "2         Jun 8, 2015      0  \n",
+       "3   February 11, 2017      0  \n",
+       "4       June 10, 2016      0  \n",
+       "5      March 1, 2016       1  \n",
+       "6        May 18, 2017      0  \n",
+       "7   December 6, 2017       1  \n",
+       "8  December 15, 2017       1  \n",
+       "9   December 4, 2017       1  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_merged.head(10) #now getting shuffle value in class collumn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "8ec64890",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['title', 'text', 'subject', 'date', 'class'], dtype='object')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_merged.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "f97cd764",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=data_merged.drop(['title','subject','date'],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2f1457f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(44878, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>WASHINGTON (Reuters) - A U.S. Senate committee...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>This is the same school district that is beggi...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Kids Just Want To Use Words  That s racist, th...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Washed up television personality Piers Morgan ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Today, Donald Trump tried to walk back his rec...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  class\n",
+       "0  WASHINGTON (Reuters) - A U.S. Senate committee...      1\n",
+       "1  This is the same school district that is beggi...      0\n",
+       "2  Kids Just Want To Use Words  That s racist, th...      0\n",
+       "3  Washed up television personality Piers Morgan ...      0\n",
+       "4  Today, Donald Trump tried to walk back his rec...      0"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(data.shape)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbfc6c3e",
+   "metadata": {},
+   "source": [
+    "# checking null in final data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a1fd19fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "text     0\n",
+       "class    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "161e03ed",
+   "metadata": {},
+   "source": [
+    "re.sub() requires 3 arguments:\n",
+    "\n",
+    "    pattern\n",
+    "    replacement string\n",
+    "    input string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61fb1cf9",
+   "metadata": {},
+   "source": [
+    "\\S\n",
+    "\n",
+    "Matches any non-whitespace character (letters, numbers, symbols, etc.)\n",
+    "\n",
+    "Example: a, 1, . all match, but a space ( ) does not.\n",
+    "\n",
+    "\\S+\n",
+    "\n",
+    "+ means one or more of the preceding element.\n",
+    "\n",
+    "So \\S+ matches a sequence of non-space characters.\n",
+    "\n",
+    "\\S+@\\S+\n",
+    "\n",
+    "Combines two sequences of non-space characters with an @ in the middle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "47041310",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wordout(text):\n",
+    "    # convert text to lowercase\n",
+    "    text = text.lower()\n",
+    "    # remove urls (http, https, www)\n",
+    "    text = re.sub(r\"https\\S+|http\\S+|www\\S+\", '', text)\n",
+    "    # remove emails\n",
+    "    text = re.sub(r\"\\S+@\\S+\", '', text)\n",
+    "    # remove HTML tags\n",
+    "    text = re.sub(r\"<.*?>\", '', text)\n",
+    "    # remove words containing numbers\n",
+    "    text = re.sub(r\"\\w*\\d\\w*\", '', text)\n",
+    "    # remove punctuation and special characters (keep letters + spaces)\n",
+    "    text = re.sub(r\"[^a-z\\s]\", '', text)\n",
+    "    # remove extra spaces and newlines\n",
+    "    text = re.sub(r'\\s+', ' ', text).strip()\n",
+    "    return text\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "13738fe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['text']=data['text'].apply(wordout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "0d158b56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=data['text']\n",
+    "y=data['class']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b556f6f4",
+   "metadata": {},
+   "source": [
+    "# train-test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "d98208b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test,y_train,y_test=train_test_split(x,y,test_size=0.25)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "806e1a50",
+   "id": "b6d4470f",
    "metadata": {},
    "outputs": [],
    "source": []
