--- a/Fake_News_Detection.ipynb
+++ b/Fake_News_Detection.ipynb
@@ -4756,8 +4756,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "281adc88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "LR Prediction : Fake News \n",
+      " DT Prediction: Fake News \n",
+      "GB Prediction: Fake News \n",
+      " RDF Prediction:Not a Fake news\n"
+     ]
+    }
+   ],
+   "source": [
+    "manual_test('''India successfully launched its latest weather satellite from the Sriharikota space center on Monday.  \n",
+    "The satellite will help improve forecasting of monsoon rains and track cyclones in the Bay of Bengal.  \n",
+    "Scientists from ISRO stated that the mission was completed as planned and the satellite entered its  \n",
+    "intended orbit within 20 minutes of liftoff.\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "e8d79662",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "LR Prediction : Fake News \n",
+      " DT Prediction: Fake News \n",
+      "GB Prediction: Fake News \n",
+      " RDF Prediction:Fake News\n"
+     ]
+    }
+   ],
+   "source": [
+    "manual_test(\"delhi will not capital of india\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "9b833891",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "LR Prediction : Fake News \n",
+      " DT Prediction: Fake News \n",
+      "GB Prediction: Fake News \n",
+      " RDF Prediction:Fake News\n"
+     ]
+    }
+   ],
+   "source": [
+    "manual_test(\"india will land on mars\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "8bb33698",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "LR Prediction : Fake News \n",
+      " DT Prediction: Fake News \n",
+      "GB Prediction: Fake News \n",
+      " RDF Prediction:Fake News\n"
+     ]
+    }
+   ],
+   "source": [
+    "manual_test('''India had chosen not to shake hands with their Pakistani coun ..\n",
+    "\n",
+    "Read more at:\n",
+    "http://timesofindia.indiatimes.com/articleshow/123916213.cms?utm_source=contentofinterest&utm_medium=text&utm_campaign=cppst\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "566ff420",
    "metadata": {},
    "outputs": [],
    "source": []
